# PolyPy--a-master-and-universal-guide-and-proof-of-work-to-polly-py-paradigm

./: README.md  proof_of_work_1_hello.py  proof_of_work_2_led_blink.py  proof_of_work_3_web.py  proof_of_work_4_graphics.py  pyproject.toml
.github/workflows/: ci.yml  publish.yml
backend/: app.py
dytx/: __init__.py  asm.py  binary.py  firmware.py  machine.py  web.py
frontend/: app.js  index.html  style.css
