[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dytx"
version = "2.0.0"
description = "DYTX — Dynamic Type eXchange runtime for the PolyPy paradigm (Thonny IDE + MicroPython)"
readme = "README.md"
license = { text = "MIT" }
authors = [
  { name = "chuckyLeeVIII", email = "chuckyLeeVIII@users.noreply.github.com" }
]
keywords = ["micropython", "thonny", "polypy", "dytx", "embedded", "rp2040", "esp32", "asm", "firmware"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Embedded Systems",
  "Topic :: Software Development :: Compilers",
  "Topic :: System :: Hardware",
]
requires-python = ">=3.12"
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
  "pytest-cov>=4.0",
  "ruff>=0.4",
  "mypy>=1.0",
]

[project.urls]
Homepage = "https://github.com/chuckyLeeVIII/PolyPy--a-master-and-universal-guide-and-proof-of-work-to-polly-py-paradigm"
Repository = "https://github.com/chuckyLeeVIII/PolyPy--a-master-and-universal-guide-and-proof-of-work-to-polly-py-paradigm"
Issues = "https://github.com/chuckyLeeVIII/PolyPy--a-master-and-universal-guide-and-proof-of-work-to-polly-py-paradigm/issues"

[tool.hatch.build.targets.wheel]
packages = ["dytx"]

# ── uv tool configuration ────────────────────────────────────────────────────
# Install with: uv pip install -e .
# Dev install: uv pip install -e ".[dev]"
# Run tests: uv run pytest
# Lint: uv run ruff check dytx/
# Type-check: uv run mypy dytx/

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=dytx --cov-report=term-missing -v"
